--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 16, 17, 18, 18, 19, 20, 21]\n",
+      "18.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here \n",
+    "numbers = [19, 18, 21, 16, 15, 17, 20, 18]\n",
+    "ordered_numbers = sorted(numbers)\n",
+    "mean = sum(numbers)/len(numbers)\n",
+    "print(ordered_numbers)\n",
+    "print(mean)\n",
+    "\n",
+    "#Mode is 18\n",
+    "#Median is 18"
    ]
   },
   {
@@ -50,11 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72, 95, 96, 97, 97, 98, 99, 100]\n",
+      "94.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "numbers = [100, 99, 97, 97, 96, 98, 95, 72]\n",
+    "ordered_numbers = sorted(numbers)\n",
+    "mean = sum(numbers)/len(numbers)\n",
+    "print(ordered_numbers)\n",
+    "print(mean)\n",
+    "\n",
+    "#Mode is 97\n",
+    "#Median is "
    ]
   },
   {
@@ -67,11 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# (15 + 18 +16 + x) / 4 = 17\n",
+    "x = 4*17-(15+18+16)\n",
+    "x\n"
    ]
   },
   {
@@ -94,11 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here\n",
+    "5 + 3"
    ]
   },
   {
@@ -110,11 +168,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5 0.22\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here \n",
+    "boys = 20 / 40\n",
+    "girls = round(10 / 46,2)\n",
+    "print(boys, girls)"
    ]
   },
   {
@@ -130,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# Between 0.75 and 1"
    ]
   },
   {
@@ -146,15 +215,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# Girls use FB more, times are more varied though between 1-4, boys max out at 2"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
